--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     
     <header>
         <nav class="navbar navbar-expand-md rounded d-flex justify-content-between" style="background-color: rgb(242, 242, 242); padding: 10px 30px;">
-            <div>
-                logo
+            <div style="height:70px; width: 170px;">
+                <div style="width: 100%; height: 100%;">
+                    <img src="./assets/logo.png" alt="logo" style="width:100%; height: 100%;" class="rounded"/>
+                </div>
             </div>
             <button class="btn button-outline-none text-white" type="submit">
                 sign in
