--- a/index.html
+++ b/index.html
@@ -13,19 +13,32 @@
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <title>Document</title>
 </head>
-<body style="background-color: rgb(191, 191, 191); font-family: 'Satisfy', cursive; overflow-x: hidden;">
+<body style="background-color: rgb(253, 247, 247); font-family: 'Satisfy', cursive; overflow-x: hidden;">
     
     <header>
-        <nav class="navbar navbar-expand-md rounded d-flex justify-content-between" style="background-color: rgb(242, 242, 242); padding: 10px 30px;">
-            <div style="height:70px; width: 170px;">
+        <nav class="navbar navbar-expand-md rounded d-flex justify-content-between">
+            <div style="height:70px; width: 120px;">
                 <div style="width: 100%; height: 100%;">
-                    <img src="./assets/logo.png" alt="logo" style="width:100%; height: 100%;" class="rounded"/>
+                    <img src="./assets/Logo (2).png" alt="logo" style="width:100%; height: 100%; background-size: 200% auto;" class="rounded"/>
                 </div>
             </div>
-            <button class="btn button-outline-none text-white" type="submit">
-                sign in
-            </button>
+            <div class="d-flex flex-row justify-content-between">
+                <div>
+                    <form class="d-flex flex-row m-1 ">
+                        <input type="text" name="city" placeholder="Enter your city" class="rounded"/>
+                        <input type="submit" value="search" class="rounded btn text-white"/>
+                    </form>
+                </div>
+                <div>
+                    <button class="btn button-outline-none text-white m-1" type="submit">
+                        sign in
+                    </button>
+                </div>
+            </div>
         </nav>
     </header>
+
+    
+
 </body>
 </html>
