added some changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- icons -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
-    <title>Document</title>
+    <title>Medicare</title>
 </head>
 <body style="background-color: rgb(253, 247, 247); font-family: 'Satisfy', cursive; overflow-x: hidden;">
     
@@ -38,7 +38,60 @@
         </nav>
     </header>
 
-    
+    <main class="conatiner m-5">
+        <div class="row">
+            <div class=" col-3 gap-5 mt-4">
+                <div class="card">
+                    <div class="card-body">
+                      <h5 class="card-title">Shri Sai Clinic</h5>
+                      <img class="card-img-top" src="./assets/Logo 500x500 px.jpeg" alt="Card image cap">
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn text-white">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class=" col-3  gap-5 mt-4">
+                <div class="card">
+                    <div class="card-body">
+                      <h5 class="card-title">Dr. Agrawal's Clinic</h5>
+                      <img class="card-img-top" src="./assets/Logo 500x500 px.jpeg" alt="Card image cap">
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn text-white">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class=" col-3  gap-5 mt-4">
+                <div class="card">
+                    <div class="card-body">
+                      <h5 class="card-title">Bafna Hospital</h5>
+                      <img class="card-img-top" src="./assets/Logo 500x500 px.jpeg" alt="Card image cap">
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn text-white">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class=" col-3  gap-5 mt-4">
+                <div class="card">
+                    <div class="card-body">
+                      <h5 class="card-title">Aditya Hospital</h5>
+                      <img class="card-img-top" src="./assets/Logo 500x500 px.jpeg" alt="Card image cap">
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn text-white">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+            <div class=" col-3  gap-5 mt-4">
+                <div class="card">
+                    <div class="card-body">
+                      <h5 class="card-title">Aditya Hospital</h5>
+                      <img class="card-img-top" src="./assets/Logo 500x500 px.jpeg" alt="Card image cap">
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn text-white">Go somewhere</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 
 </body>
 </html>
