added some more page

--- a/index.html
+++ b/index.html
@@ -30,9 +30,14 @@
                     </form>
                 </div>
                 <div>
-                    <button class="btn button-outline-none text-white m-1" type="submit">
+                    <a class="btn button-outline-none text-white m-1" href="signin.html">
                         sign in
-                    </button>
+                    </a>
+                </div>
+                <div>
+                    <a class="btn button-outline-none text-white m-1" href="signup.html">
+                        sign up
+                    </a>
                 </div>
             </div>
         </nav>
@@ -46,7 +51,7 @@
                       <h5 class="card-title">Shri Sai Clinic</h5>
                       <img class="card-img-top" src="./assets/Logo 500x500 px.jpeg" alt="Card image cap">
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn text-white">Go somewhere</a>
+                      <a href="page.html" class="btn text-white">Go somewhere</a>
                     </div>
                 </div>
             </div>
@@ -56,7 +61,7 @@
                       <h5 class="card-title">Dr. Agrawal's Clinic</h5>
                       <img class="card-img-top" src="./assets/Logo 500x500 px.jpeg" alt="Card image cap">
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn text-white">Go somewhere</a>
+                      <a href="page.html" class="btn text-white">Go somewhere</a>
                     </div>
                 </div>
             </div>
@@ -66,7 +71,7 @@
                       <h5 class="card-title">Bafna Hospital</h5>
                       <img class="card-img-top" src="./assets/Logo 500x500 px.jpeg" alt="Card image cap">
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn text-white">Go somewhere</a>
+                      <a href="page.html" class="btn text-white">Go somewhere</a>
                     </div>
                 </div>
             </div>
@@ -76,7 +81,7 @@
                       <h5 class="card-title">Aditya Hospital</h5>
                       <img class="card-img-top" src="./assets/Logo 500x500 px.jpeg" alt="Card image cap">
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn text-white">Go somewhere</a>
+                      <a href="page.html" class="btn text-white">Go somewhere</a>
                     </div>
                 </div>
             </div>
@@ -86,7 +91,7 @@
                       <h5 class="card-title">Aditya Hospital</h5>
                       <img class="card-img-top" src="./assets/Logo 500x500 px.jpeg" alt="Card image cap">
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="#" class="btn text-white">Go somewhere</a>
+                      <a href="page.html" class="btn text-white">Go somewhere</a>
                     </div>
                 </div>
             </div>
