aded some more pages

--- a/docHome.html
+++ b/docHome.html
@@ -23,14 +23,14 @@
                 </div>
             </div>
             <div class="d-flex flex-row justify-content-between">
-                <div>
-                    <a class="btn button-outline-none text-white m-1" href="ClinicSignin.html">
-                        Medical facility sign up
+                <div style="align-items: center; padding: 10px;">
+                    <a class=" text-white" href="Profile.html" style="margin: 10px;">
+                        Doctor name
                     </a>
                 </div>
                 <div>
-                    <a class="btn button-outline-none text-white m-1" href="aLogin.html">
-                        Admin Log in
+                    <a class="btn button-outline-none text-white m-1" href="signup.html">
+                        sign out
                     </a>
                 </div>
             </div>
@@ -38,19 +38,7 @@
     </header>
 
     <main class="conatiner m-5">
-        <div class="d-flex justify-content-center">
-            <form>
-                <div class="form-group">
-                  <label for="exampleInputEmail1">Email address</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-                </div>
-                <div class="form-group">
-                  <label for="exampleInputPassword1">Password</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                </div><br>
-                <button type="submit" class="btn text-white">User Sign in</button>
-            </form>
-        </div>
+        Apointments made by user....
     </main>
 
 </body>
