--- a/ClinicSignin.html
+++ b/ClinicSignin.html
@@ -24,8 +24,8 @@
             </div>
             <div class="d-flex flex-row justify-content-between">
                 <div>
-                    <a class="btn button-outline-none text-white m-1" href="ClinicSignin.html">
-                        Medical facility sign up
+                    <a class="btn button-outline-none text-white m-1" href="signin.html">
+                        User Sign in
                     </a>
                 </div>
                 <div>
@@ -48,7 +48,7 @@
                   <label for="exampleInputPassword1">Password</label>
                   <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
                 </div><br>
-                <button type="submit" class="btn text-white">User Sign in</button>
+                <button type="submit" class="btn text-white">Sign in</button>
             </form>
         </div>
     </main>
