--- a/ClinicSignup.html
+++ b/ClinicSignup.html
@@ -24,8 +24,8 @@
             </div>
             <div class="d-flex flex-row justify-content-between">
                 <div>
-                    <a class="btn button-outline-none text-white m-1" href="ClinicSignup.html">
-                        Sign up for medical facility
+                    <a class="btn button-outline-none text-white m-1" href="ClinicSignin.html">
+                        Sign in for medical facility
                     </a>
                 </div>
             </div>
@@ -36,8 +36,16 @@
         <div class="d-flex justify-content-center">
             <form>
                 <div class="form-group">
-                  <label for="name">Name</label>
-                  <input type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Name"> 
+                  <label for="Cname">Name of Clinic</label>
+                  <input type="text" class="form-control" id="Cname" aria-describedby="Clinic name" placeholder="Enter Clinic Name"> 
+                </div>
+                <div class="form-group">
+                    <label for="docname">Name of the Doctor</label>
+                    <input type="text" class="form-control" id="docname" aria-describedby="Doctor name" placeholder="Enter Name"> 
+                </div>
+                <div class="form-group">
+                    <label for="speciality">Specialist of</label>
+                    <input type="text" class="form-control" id="speciality" aria-describedby="Specialist" placeholder="Enter Specialist"> 
                 </div>
                 <div class="form-group">
                     <label for="exampleInputEmail1">Email address</label>
@@ -53,10 +61,26 @@
                     <input type="number" class="form-control" id="Contact" placeholder="Contact">
                 </div>
                 <div class="form-group">
+                    <label for="fee">Consultancy fee</label>
+                    <input type="number" class="form-control" id="fee" placeholder="Enter consultancy fee">
+                </div>
+                <div class="form-group">
+                    <label for="facility">Medical facilities Available</label>
+                    <input type="text" class="form-control" id="facility" placeholder="Enter facilities...">
+                </div>
+                <div class="form-group">
+                    <label for="help">Medical help applicable</label>
+                    <input type="text" class="form-control" id="help" placeholder="Enter schemes applicable">
+                </div>
+                <div class="form-group">
                     <label for="Cordinates">Location Cordinates</label>
                     <input type="text" class="form-control" id="Cordinates" placeholder="Cordinates">
+                </div>
+                <div class="form-group">
+                    <label for="time">Timming</label>
+                    <input type="text" class="form-control" id="time" placeholder="Enter timings">
                 </div><br>
-                <button type="submit" class="btn text-white">User Sign up</button>
+                <button type="submit" class="btn text-white">Sign up</button>
             </form>
         </div>
     </main>
