--- a/ahome.html
+++ b/ahome.html
@@ -24,13 +24,8 @@
             </div>
             <div class="d-flex flex-row justify-content-between">
                 <div>
-                    <a class="btn button-outline-none text-white m-1" href="ClinicSignin.html">
-                        Medical facility sign up
-                    </a>
-                </div>
-                <div>
-                    <a class="btn button-outline-none text-white m-1" href="aLogin.html">
-                        Admin Log in
+                    <a class="btn button-outline-none text-white m-1" href="signout.html">
+                        sign out
                     </a>
                 </div>
             </div>
@@ -38,18 +33,30 @@
     </header>
 
     <main class="conatiner m-5">
-        <div class="d-flex justify-content-center">
-            <form>
-                <div class="form-group">
-                  <label for="exampleInputEmail1">Email address</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+        <center><h2>Welcome Admin!!!!</h2></center><br>
+        <div class="row">
+            <div class="row col-6 ">
+                <div class=" col-6 gap-5 mt-4">
+                    <div class="card">
+                        <div class="card-body ">
+                          <h5 class="card-title">Customers</h5>
+                          <a href="addUser.html" class="btn text-white">Add User</a><br><br>
+                          <a href="showUser.html" class="btn text-white">Show User</a><br><br>
+                          <a href="showUserCom.html" class="btn text-white">Show User Complains</a>
+                        </div>
+                    </div>
                 </div>
-                <div class="form-group">
-                  <label for="exampleInputPassword1">Password</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-                </div><br>
-                <button type="submit" class="btn text-white">User Sign in</button>
-            </form>
+                <div class=" col-6 gap-5 mt-4">
+                    <div class="card">
+                        <div class="card-body">
+                          <h5 class="card-title">Doctors</h5>
+                          <a href="addDoc.html" class="btn text-white">Add Doctors</a><br><br>
+                          <a href="showDoc.html" class="btn text-white">Show Doctors</a><br><br>
+                          <a href="showCom.html" class="btn text-white">Show Complains</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
 
