--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                       <h5 class="card-title">Shri Sai Clinic</h5>
                       <img class="card-img-top" src="./assets/Logo 500x500 px.jpeg" alt="Card image cap">
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="page.html" class="btn text-white">Go somewhere</a>
+                      <a href="page.html" class="btn text-white">Go to clinic</a>
                     </div>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                       <h5 class="card-title">Dr. Agrawal's Clinic</h5>
                       <img class="card-img-top" src="./assets/Logo 500x500 px.jpeg" alt="Card image cap">
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="page.html" class="btn text-white">Go somewhere</a>
+                      <a href="page.html" class="btn text-white">Go to clinic</a>
                     </div>
                 </div>
             </div>
@@ -71,7 +71,7 @@
                       <h5 class="card-title">Bafna Hospital</h5>
                       <img class="card-img-top" src="./assets/Logo 500x500 px.jpeg" alt="Card image cap">
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="page.html" class="btn text-white">Go somewhere</a>
+                      <a href="page.html" class="btn text-white">Go to clinic</a>
                     </div>
                 </div>
             </div>
@@ -81,7 +81,7 @@
                       <h5 class="card-title">Aditya Hospital</h5>
                       <img class="card-img-top" src="./assets/Logo 500x500 px.jpeg" alt="Card image cap">
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="page.html" class="btn text-white">Go somewhere</a>
+                      <a href="page.html" class="btn text-white">Go to clinic</a>
                     </div>
                 </div>
             </div>
@@ -91,7 +91,7 @@
                       <h5 class="card-title">Aditya Hospital</h5>
                       <img class="card-img-top" src="./assets/Logo 500x500 px.jpeg" alt="Card image cap">
                       <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                      <a href="page.html" class="btn text-white">Go somewhere</a>
+                      <a href="page.html" class="btn text-white">Go to clinic</a>
                     </div>
                 </div>
             </div>
