--- a/signup.html
+++ b/signup.html
@@ -12,6 +12,17 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous" />
     <title>Medicare</title>
+
+    <script>
+        function myFunction() {
+            var x = document.getElementById("password");
+            if (x.type === "password") {
+                x.type = "text";
+            } else {
+                x.type = "password";
+            }
+        }
+    </script>
 </head>
 <body style="background-color: rgb(253, 247, 247); font-family: 'Satisfy', cursive; overflow-x: hidden;">
     
@@ -34,27 +45,30 @@
 
     <main class="conatiner m-5">
         <div class="d-flex justify-content-center">
-            <form>
+            <form name="form" onsubmit="validateForm();">
                 <div class="form-group">
                   <label for="name">Name</label>
-                  <input type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Name"> 
+                  <input type="text" class="form-control" id="name" aria-describedby="name" placeholder="Enter Name" required> 
                 </div>
                 <div class="form-group">
                     <label for="exampleInputEmail1">Email address</label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" required>
                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                 </div>
                 <div class="form-group">
-                  <label for="exampleInputPassword1">Password</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                  <label for="password">Password</label>
+                  <input type="password" class="form-control" id="password" placeholder="Password" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+                  title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters">
+                  <input type="checkbox" onclick="myFunction()">Show Password
                 </div>
                 <div class="form-group">
                     <label for="Contact">Contact Number</label>
-                    <input type="number" class="form-control" id="Contact" placeholder="Contact">
+                    <input type="number" class="form-control" id="Contact" placeholder="Contact" required pattern="[6-9] [0-9]+"
+                    title="Enter valid number">
                 </div>
                 <div class="form-group">
                     <label for="Cordinates">Location Cordinates</label>
-                    <input type="text" class="form-control" id="Cordinates" placeholder="Cordinates">
+                    <input type="text" class="form-control" id="Cordinates" placeholder="Cordinates" required>
                 </div><br>
                 <button type="submit" class="btn text-white">User Sign up</button>
             </form>
