--- a/ClinicSignup.html
+++ b/ClinicSignup.html
@@ -76,6 +76,10 @@
                     title="Enter valid number">
                 </div>
                 <div class="form-group">
+                    <label for="address">Address</label>
+                    <input type="text" class="form-control" id="address" placeholder="Address" required>
+                </div>
+                <div class="form-group">
                     <label for="fee">Consultancy fee</label>
                     <input type="number" class="form-control" id="fee" placeholder="Enter consultancy fee" required pattern="[0-9]+">
                 </div>
