--- a/signup.html
+++ b/signup.html
@@ -67,6 +67,10 @@
                     title="Enter valid number">
                 </div>
                 <div class="form-group">
+                    <label for="address">Address</label>
+                    <input type="text" class="form-control" id="address" placeholder="Address" required>
+                </div>
+                <div class="form-group">
                     <label for="Cordinates">Location Cordinates</label>
                     <input type="text" class="form-control" id="Cordinates" placeholder="Cordinates" required>
                 </div><br>
